splits playbooks to build amis in two sets

--- a/share/playbooks/aws-create-backbone-images.yml
+++ b/share/playbooks/aws-create-backbone-images.yml
@@ -6,4 +6,5 @@
     - courtyard: "{{courtyard_name | default(tag_prefix+'courtyard')}}"
 
   roles:
-    - create_amis
+    - create_dbs_ami
+    - create_sally_ami
