--- a/share/playbooks/aws-create-authorized.yml
+++ b/share/playbooks/aws-create-authorized.yml
@@ -22,6 +22,7 @@
     - keyimport
     - createvpc
     - creategroups
+    - create_gateways
     - createiamroles
     - createprivatedns
     - uploadidentities
