--- a/share/playbooks/roles/associate_webfront/tasks/main.yml
+++ b/share/playbooks/roles/associate_webfront/tasks/main.yml
@@ -2,6 +2,15 @@
 
 - include_vars: group_vars/dynamic
 
+- route53:
+    command: create
+    zone: "{{tag_prefix}}ec2.internal."
+    record: "web.{{tag_prefix}}ec2.internal."
+    private_zone: yes
+    type: A
+    value: "{{web_servers.instances[0].private_ip}}"
+    overwrite: yes
+
 - name: Association of elastic ip address to web-front
   local_action:
      module: ec2_eip
