installs even when not directly under srcTop

--- a/share/playbooks/roles/create_gateways/tasks/main.yml
+++ b/share/playbooks/roles/create_gateways/tasks/main.yml
@@ -43,6 +43,7 @@
     tags:
       Name: Internal
     subnets:
+      - "{{ app_subnet_id }}"
       - "{{ dbs_subnet_id }}"
     routes:
       - dest: 0.0.0.0/0
