--- a/share/playbooks/roles/create_webfront_ami/tasks/webfront_ami.yml
+++ b/share/playbooks/roles/create_webfront_ami/tasks/webfront_ami.yml
@@ -1,8 +1,11 @@
 # Create the AMI.
+#
+# cloud-init has been timed at 10 min 20 sec, so we will wait 15min
+# for the webserver to come up.
 
 - name: Wait for configuration of EC2 instance completed
   wait_for:
-    delay: 540
+    delay: 900
     host: "{{webfront_base.instances[0].private_dns_name}}"
     port: 80
     state: started
