--- a/share/playbooks/roles/create_webfront_ami/tasks/webfront_ami.yml
+++ b/share/playbooks/roles/create_webfront_ami/tasks/webfront_ami.yml
@@ -6,7 +6,7 @@
 - name: Wait for configuration of EC2 instance completed
   wait_for:
     delay: 900
-    host: "{{webfront_base.instances[0].private_dns_name}}"
+    host: "{{webfront_base_private_dns_name}}"
     port: 80
     state: started
 
