--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 ansible==2.6.18
-awscli==1.16.172
+awscli==1.16.257
 boto3==1.9.222
 elasticsearch==2.4.0
 urllib3==1.24.2
+pyasn1_modules==0.2.5
 pyOpenSSL==18.0.0
-
