--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ ansible==2.6.18
 awscli==1.16.257
 boto3==1.9.222
 elasticsearch==2.4.0
-urllib3==1.24.2
 pyasn1_modules==0.2.5
 pyOpenSSL==18.0.0
+pytz==2019.3
 requests==2.22.0
+urllib3==1.24.2
