--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ ansible==2.9.20
 awscli==1.19.50
 boto3==1.17.12
 elasticsearch==7.6.0
+paramiko==2.8.0
 pyasn1_modules==0.2.5
 pyOpenSSL==18.0.0
 pytz==2020.1
