--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 ansible==2.9.20
-awscli==1.19.50
-boto3==1.17.12
+awscli==1.27.43
+boto3==1.26.43
 elasticsearch==7.6.0
 paramiko==2.8.0
 pyasn1_modules==0.2.5
@@ -10,3 +10,6 @@ requests==2.28.1
 six==1.16.0
 sqlparse==0.3.1
 urllib3==1.26.12
+
+# prerequisites with native code
+# cryptography
