--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ ansible==2.9.20
 awscli==1.27.71
 boto3==1.26.71
 elasticsearch==7.6.0
+Fabric3==1.14.post1
 paramiko==2.8.0
 pyasn1_modules==0.2.5
 pyOpenSSL==22.1.0
