--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-ansible==2.9.20
-awscli==1.27.71
-boto3==1.26.71
-elasticsearch==7.6.0
-Fabric3==1.14.post1
-paramiko==2.8.0
-pyasn1_modules==0.2.5
-pyOpenSSL==22.1.0
-pytz==2022.1
-requests==2.28.1
+ansible==2.9.20            # mostly for duploades (ElasticSearch) at this point
+awscli==1.31.5
+boto3==1.33.5              # clouds deploy and logs management
+Fabric3==1.14.post1        # vmware.py and driver.py
+paramiko==2.12.0           # drundocker.py
+pyasn1_modules==0.2.5      # awscloud.py
+pyOpenSSL==22.1.0          # awscloud.py
+pytz==2023.3.post1         # logs management (dcopylogs, monitor.py, dparselog)
+requests==2.31.0           # logs management (dcopylogs, monitor.py, dparselog)
 six==1.16.0
-sqlparse==0.3.1
+sqlparse==0.4.2            # integrity.py
+
+# used in duploades (ElasticSearch)
+elasticsearch==7.6.0
 urllib3==1.26.12
 
 # prerequisites with native code
 # cryptography
+# cysystemd==1.5.4
