--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 ansible==2.9.20            # mostly for duploades (ElasticSearch) at this point
-boto3==1.34.40             # clouds deploy and logs management
+boto3==1.35.40             # clouds deploy and logs management
 Fabric3==1.14.post1        # vmware.py and driver.py
 jinja2==3.1.5              # cloud templates
-paramiko==2.12.0           # drundocker.py
-pyasn1_modules==0.2.5      # awscloud.py
-pyOpenSSL==22.1.0          # awscloud.py
-pytz==2023.3.post1         # logs management (dcopylogs, monitor.py, dparselog)
-requests==2.31.0           # logs management (dcopylogs, monitor.py, dparselog)
+paramiko==3.5.0            # drundocker.py
+pyasn1_modules==0.4.1      # awscloud.py
+pyOpenSSL==24.2.1          # awscloud.py
+pytz==2024.2               # logs management (dcopylogs, monitor.py, dparselog)
+requests==2.32.3           # logs management (dcopylogs, monitor.py, dparselog)
 six==1.16.0
-sqlparse==0.4.2            # integrity.py
+sqlparse==0.5.1            # integrity.py
 
 # used in duploades (ElasticSearch)
 elasticsearch==7.6.0
-urllib3==1.26.12
+urllib3==2.2.3
 
 # prerequisites with native code
-# cryptography
+# cryptography==43.0.1
 # cysystemd==1.5.4
 
 # development
