--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 ansible==2.9.20            # mostly for duploades (ElasticSearch) at this point
 boto3==1.35.40             # clouds deploy and logs management
-Fabric3==1.14.post1        # vmware.py and driver.py
+#Fabric3==1.14.post1        # vmware.py and driver.py
 jinja2==3.1.5              # cloud templates
 paramiko==3.5.0            # drundocker.py
 pyasn1_modules==0.4.1      # awscloud.py
